<resources>
    <string name="locomotive_activity_title">Локомотивы на участке</string>
    <string name="locomotive_activity_percent">%1$d%%</string>
    <string name="locomotive_activity_locomotive_title">%1$s %2$s </string>
    <string name="locomotive_activity_section_title">%1$s %2$s%3$s</string>
    <string name="item_section">(%s)</string>
    <string name="status_activity_title">Статус работ</string>
    <string name="performance_title">Исполнение %1$s</string>
    <string name="performance_other_performers_amount">+ %1$x чел.</string>
    <string name="performance_filter_tmc">Наличие ТМЦ</string>
    <string name="performance_filter_measurements">Наличие замеров</string>
    <string name="performance_filter_mpi">Наличие МПИ</string>
    <string name="urgent_activity_title">Срочно</string>
    <string name="urgent_activity_status_expired">%1$s (Просрочена)</string>
    <string name="urgent_activity_status_paused">%1$s (Приостановлена)</string>
    <string name="urgent_activity_status_done">%1$s (Выполнена)</string>
    <string name="urgent_activity_equipment">Локомотив/секция: %1$s</string>
    <string name="urgent_activity_restart">Возобновить</string>
    <string name="urgent_activity_stop">Завершить</string>
    <string name="urgent_activity_return">Отменить выполнение</string>
    <string name="urgent_activity_accept">Принять</string>
    <string name="urgent_other_performers_amount">+ %1$x чел.</string>
    <string name="approved_activity_title">Согласование</string>
    <string name="approved_activity_approved">На согласовании</string>
    <string name="approved_activity_not_approved">Несогласованные</string>
    <string name="approved_activity_select_all">Выбрать все</string>
    <string name="approved_activity_approve_all">Отправить на согласование</string>
    <string name="approved_activity_start">Запустить</string>
    <string name="approved_activity_approve_error">Нет работ для согласования</string>
    <string name="approved_activity_run_error">Нет работ для исполнения</string>
    <string name="approved_activity_performers_amount">+ %1$x чел.</string>
    <string name="remark_search_title">Добавление замечания. Выбор замечания</string>
    <string name="remark_search_empty_remark_error">Невозможно создать замечание без названия</string>
    <string name="remark_search_back_step">Вернуться на предыдущий шаг</string>
    <string name="remark_detail_title"></string>
    <string name="remark_detail_add_work">Добавить работу</string>
    <string name="search_performer_title">Добавление замечания. Выбор Исполнителей</string>
    <string name="search_performer_title_perf">Выбор сотрудников</string>
    <string name="search_performer_outfit_time">%1$s / %2$s / %3$d%%</string>
    <string name="search_performer_outfit_normal">Норма: %1$s</string>
    <string name="search_performer_outfit_title">Наряд %1$s:</string>
    <string name="search_performer_add">Прикрепить выбранных исполнителей</string>
    <string name="search_performer_mistake">Произошла ошибка</string>
    <string name="search_performer_overload_mistake">У одного или нескольких исполнителей нагрузка более 150%%</string>
    <string name="search_performer_null_shift_mistake">У данного исполнителя не установлена продолжительность смены</string>
    <string name="search_performer_percent">%1$d%%</string>
    <string name="work_list_title">Добавление замечания. Добавление работ</string>
    <string name="work_list_title_pure">Добавление работ</string>
    <string name="work_list_back_step">Назад</string>
    <string name="work_list_add_remark">Продолжить</string>
    <string name="work_list_performers_amount">+ %1$x чел.</string>
    <string name="work_list_empty_result">По введенному запросу\nничего не найдено</string>
    <string name="locomotive_details_title">Замечания</string>
    <string name="locomotive_details_item_menu_add_performer">Исполнители</string>
    <string name="locomotive_details_remark_title">Замечания</string>
    <string name="locomotive_details_item_menu_comment">Комментарий</string>
    <string name="locomotive_details_item_menu_photo">Фотографии</string>
    <string name="locomotive_details_item_menu_accept_partly">Принять частично</string>
    <string name="locomotive_details_item_menu_divide">Разделить</string>
    <string name="locomotive_details_item_menu_measurement">Замеры</string>
    <string name="locomotive_details_item_menu_message">Сообщение</string>
    <string name="locomotive_details_item_menu_delete">Удалить</string>
    <string name="locomotive_details_item_menu_tmc">ТМЦ</string>
    <string name="locomotive_details_item_sort_performer">Исполнитель</string>
    <string name="locomotive_details_item_sort_urgency">Срочность</string>
    <string name="locomotive_details_item_sort_title">Название работ</string>
    <string name="locomotive_details_item_comment_mistake">Комментарии доступны в полной верии приложения</string>
    <string name="locomotive_details_item_create_work_mistake">Создание работ доступно в полной верии приложения</string>
    <string name="locomotive_dateils_performers_amount">+ %1$x чел.</string>
    <string name="locomotive_details_item_menu_workaround">Обходное решение</string>
    <string name="remark_activity_percent">%1$d%%</string>
    <string name="delete_work_dialog">Вы уверены, что хотите удалить работу из замечания?</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="settings_sorting_order">Порядок сортировки:</string>
    <string name="settings_sorting_priority">По приоритету</string>
    <string name="settings_sorting_term">По сроку</string>
    <string name="settings_sorting_change_date">По дате последних изменений</string>
    <string name="main_drawer_name">%1$s %2$s</string>
    <string name="main_drawer_equipment">Текущий локомотив/секция</string>
    <string name="main_drawer_equipment_not_chosen">Не выбрано</string>
    <string name="main_drawer_equipment_item">Локомотивы</string>
    <string name="main_drawer_status">Замечания</string>
    <string name="main_drawer_approvance">Согласование</string>
    <string name="main_drawer_perfomance">Исполнение</string>
    <string name="main_drawer_assignment">Назначение</string>
    <string name="main_drawer_urgency">Срочно</string>
    <string name="main_drawer_order_to_repair">Запрос на получение ТМЦ для ремонта</string>
    <string name="main_drawer_settings">Настройки</string>
    <string name="main_drawer_exit">Выход</string>
    <string name="main_drawer_version">Версия %1$s</string>
    <string name="main_drawer_telephones">Телефоны</string>
    <string name="maximum_alert_count">99+</string>
    <string name="main_drawer_plan_bik">План БИК</string>
    <string name="check_work_title_run">Запустить</string>
    <string name="check_work_title_approve">Согласовать</string>
    <string name="check_work_allert_run">Проверьте работу перед запуском!</string>
    <string name="check_work_allert_approve">Проверьте работы перед согласованием!</string>
    <string name="check_work_allert_aссept">Проверьте работы перед приемкой!</string>
    <string name="check_work_button_run">Запустить</string>
    <string name="check_work_button_approve">Согласовать</string>
    <string name="check_work_button_aссept">Принять</string>
    <string name="check_work_performers_amount">+ %1$x чел.</string>
    <string name="all_work_title">Добавление замечания. Добавление работ</string>
    <string name="all_work_title_pure">Добавление работ</string>
    <string name="all_work_add_btn_title">Добавить работы</string>
    <string name="comment_dialog_hint">Текст комментария</string>
    <string name="comment_dialog_cancel">Отмена</string>
    <string name="comment_dialog_ready">Готово</string>
    <string name="comment_dialog_mistake">Возможность оставлять коментарий появится в полной весии приложения</string>
    <string name="custom_remark_dialog_title">Вы действительно хотите добавить замечание?</string>
    <string name="custom_remark_dialog_agree">Да</string>
    <string name="custom_remark_dialog_canceled">Отмена</string>
    <string name="card_performance_apply">Принять</string>
    <string name="card_performance_return">Отменить выполнение</string>
    <string name="card_performance_percent">%1$d%%</string>
    <string name="card_performance_max_visible_percent">999+%</string>
    <string name="card_performance_norm"><b>Норма:</b> %s (%s%%)</string>
    <string name="card_performance_measurements"><b>Замеры:</b> %s</string>
    <string name="card_performance_time_remain">%s / %s</string>
    <string name="card_performance_outfit_number">%s:  </string>
    <string name="performance_activity_sort_new">Нет исполнителя</string>
    <string name="performance_activity_sort_in_task">Назначены</string>
    <string name="performance_activity_sort_performancing">Выполняются</string>
    <string name="performance_activity_sort_finished">Завершены</string>
    <string name="performance_activity_sort_accepted">Приняты мастером</string>
    <string name="performance_activity_sort_all">Все</string>
    <string name="performance_activity_accept_all">Принять все</string>
    <string name="performance_activity_start_all">Запустить все</string>
    <string name="performance_activity_performance_mistake">Для замены исполнителя требуется приостановить работу</string>
    <string name="performance_activity_stop">Завершить</string>
    <string name="performance_activity_start">Запустить</string>
    <string name="performance_activity_accept">Принять</string>
    <string name="performance_activity_return">Отменить выполнение</string>
    <string name="performance_activity_in_work">В работу</string>
    <string name="performance_activity_start_time">00:00:00</string>
    <string name="performance_activity_accept_all_mistake">Невозможно принять пустой список работ</string>
    <string name="performance_activity_start_all_work_mistake">Невозможно запустить пустой список работ</string>
    <string name="performance_activity_start_work_mistake">Невозможно запустить работу без исполнителей</string>
    <string name="performance_activity_status_new">Новая</string>
    <string name="performance_activity_switch_equipment">Сменить секцию</string>
    <string name="performance_activity_sort_in_approve">На согласовании</string>
    <string name="measurement_name">Показатель</string>
    <string name="measurement_value">Значение</string>
    <string name="measurement_norm">Норма</string>
    <string name="measurement_worker">Сотрудник</string>
    <string name="measurement_date">Дата</string>
    <string name="measurement_comment">Комментарий</string>
    <string name="measurement_type">Тип замера</string>
    <string name="measurement_edit_warning">Вы изменили аппаратные измерения ручными.\nПри сохранении изменения значения замеров будут перезаписаны,\nа статус замера изменится на ручной!\nПродолжить?</string>
    <string name="presence_header_worker">Сотрудник</string>
    <string name="presence_header_number">Номер</string>
    <string name="presence_header_presence">Явка</string>
    <string name="presence_header_time_in">Приход</string>
    <string name="presence_header_work_shift">Рабочая смена</string>
    <string name="presence_header_work_time">Часы Работы</string>
    <string name="presence_header_night_shift">Ночная смена</string>
    <string name="presence_header_work_shift_begin">Начало</string>
    <string name="presence_header_work_shift_finish">Конец</string>
    <string name="presence_header_work_time_base">Основные</string>
    <string name="presence_header_work_time_night">В т.ч. ночь</string>
    <string name="presence_header_time_out">Уход</string>
    <string name="measurements_task_dialog_positive">Ок</string>
    <string name="measurements_task_dialog_negative">Отмена</string>
    <string name="measurements_task_dialog_measurement_type">Укажите тип измерения</string>
    <string name="measurements_task_dialog_position_number">Номер позиции</string>
</resources>