<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/presence_header_worker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/presence_header_worker"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_number"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/presence_header_number"
        android:layout_width="68dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/presence_header_number"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_presence"
        app:layout_constraintStart_toEndOf="@+id/presence_header_worker" />

    <TextView
        android:id="@+id/presence_header_presence"
        android:layout_width="68dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/presence_header_presence"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_time_in"
        app:layout_constraintStart_toEndOf="@+id/presence_header_number" />

    <TextView
        android:id="@+id/presence_header_time_in"
        android:layout_width="68dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/presence_header_time_in"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_time_out"
        app:layout_constraintStart_toEndOf="@+id/presence_header_presence" />

    <TextView
        android:id="@+id/presence_header_time_out"
        android:layout_width="68dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/presence_header_time_out"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_work_shift"
        app:layout_constraintStart_toEndOf="@+id/presence_header_time_in" />

    <TextView
        android:id="@+id/presence_header_work_shift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_shift"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toTopOf="@id/presence_header_work_shift_begin"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_work_time"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/presence_header_time_out"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/presence_header_work_shift_begin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_shift_begin"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_work_shift_finish"
        app:layout_constraintStart_toStartOf="@+id/presence_header_work_shift"
        app:layout_constraintTop_toBottomOf="@id/presence_header_work_shift" />

    <TextView
        android:id="@+id/presence_header_work_shift_finish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_shift_finish"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_work_time"
        app:layout_constraintStart_toEndOf="@+id/presence_header_work_shift_begin"
        app:layout_constraintTop_toBottomOf="@id/presence_header_work_shift" />

    <TextView
        android:id="@+id/presence_header_work_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_time"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toTopOf="@id/presence_header_work_time_base"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_night_shift"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/presence_header_work_shift"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/presence_header_work_time_base"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_time_base"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_work_time_night"
        app:layout_constraintStart_toEndOf="@+id/presence_header_work_shift"
        app:layout_constraintStart_toStartOf="@+id/presence_header_work_time"
        app:layout_constraintTop_toBottomOf="@id/presence_header_work_time" />

    <TextView
        android:id="@+id/presence_header_work_time_night"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/presence_header_work_time_night"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/presence_header_work_time"
        app:layout_constraintEnd_toStartOf="@+id/presence_header_night_shift"
        app:layout_constraintStart_toEndOf="@+id/presence_header_work_time_base"
        app:layout_constraintTop_toBottomOf="@id/presence_header_work_time" />

    <TextView
        android:id="@+id/presence_header_night_shift"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/presence_header_night_shift"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/presence_header_work_time" />

</androidx.constraintlayout.widget.ConstraintLayout>