<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:background="@android:drawable/dialog_holo_light_frame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/measure_edit_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/measurement_edit_warning"
            android:textColor="@color/appBlack"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/positive_btn"
            style="@style/Widget.App.Button.Green"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/measurements_task_dialog_positive"
            app:layout_constraintBottom_toBottomOf="@+id/negative_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/negative_btn" />

        <Button
            android:id="@+id/negative_btn"
            style="@style/Widget.App.Button.Red"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/measurements_task_dialog_negative"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/measure_edit_warn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>